2002-05-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* pccl.el (ccl-usable): Make non-MULE XEmacs don't require `ccl'
	even if this file is mis-compiled for XEmacs with MULE.

2002-03-23  Nix  <nix@esperi.demon.co.uk>

	* poem-ltn1.el (truncate-string): Act like the real `truncate-string':
	do not fail if the string is shorter than the max length.

2002-04-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* poem-xm.el (string-to-char-list): Revive it again.

2002-04-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* poem-xm.el (string-to-char-list): Remove.  It is restored in
	XEmacs CVS.

2002-04-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* poem-xm.el (char-length): New function.
	(string-to-char-list): New function.

2002-03-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* pym.el: Add a note that `def*-maybe' might not provide functions
	or variables at run-time.

2001-12-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* tinycustom.el (custom-declare-face): New function.
	(defface): Use it.

2001-10-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* poe.el (format-time-string): Support the 3rd arg `universal'.
	(support-timezone-in-numeric-form-and-3rd-arg): Renamed from
	`support-timezone-in-numeric-form';
	support the 3rd arg `universal'.

2001-10-12  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* poe.el (format-time-string): Support the construct `%z'.
	(support-timezone-in-numeric-form): New advice.

2001-09-09   Daiki Ueno  <ueno@unixuser.org>

	* pccl.el (transform-make-coding-system-args): Follow old backquote
	style.

2001-07-20  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* install.el (install-file, install-elisp-module): Set file modes
	according to `install-overwritten-file-modes'.

	* poe-18.el (defalias): Remove alias to fset and define it by
	using `defun'.

2001-06-23  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* install.el (install-files): Do not make DEST directory when
	JUST-PRINT is non-nil.

2001-06-20  Akihiro MOTOKI <amotoki@dd.iij4u.or.jp>
