@@ -114,6 +114,10 @@
     ((ascii greek-iso8859-7)				. iso-8859-7)
     ((ascii hebrew-iso8859-8)				. iso-8859-8)
     ((ascii latin-iso8859-9)				. iso-8859-9)
+    ,(if (find-coding-system 'iso-8859-14)
+	 '((ascii latin-iso8859-14)			. iso-8859-14))
+    ,(if (find-coding-system 'iso-8859-15)
+	 '((ascii latin-iso8859-15)			. iso-8859-15))
     ,(if (featurep 'utf-2000)
 	 '((ascii latin-jisx0201
 		  japanese-jisx0208-1978
