@@ -1,3 +1,9 @@
+2002-06-21  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* mcs-e20.el (charsets-mime-charset-alist): Add Latin8 and Latin9
+	charsets.  Suggested by Tatsuya Kinoshita <tats@iris.ne.jp>.
+	* mcs-xm.el (charsets-mime-charset-alist): Ditto.
+
 2002-05-14  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* pccl.el (ccl-usable): Make non-MULE XEmacs don't require `ccl'
